@@ -1,15 +1,22 @@
 package com.app.mindbody.controllers;
 
 import com.app.mindbody.config.JwtService;
-import com.app.mindbody.dto.UserDTO;
-import com.app.mindbody.models.User;
-import com.app.mindbody.repositories.UserRepository;
+import com.app.mindbody.dto.UserAuthDTO;
+import com.app.mindbody.dto.UserFullDTO;
+import com.app.mindbody.dto.UserProfileDTO;
+import com.app.mindbody.models.UserAuth;
+import com.app.mindbody.models.UserProfile;
+import com.app.mindbody.repositories.UserAuthRepository;
+import com.app.mindbody.repositories.UserProfileRepository;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/user")
@@ -17,53 +24,46 @@ import java.util.List;
 public class UserController {
 
     private final JwtService jwtService;
-    private final UserRepository userRepository;
+    private final UserAuthRepository userAuthRepository;
+    private final UserProfileRepository userProfileRepository;
 
-    @GetMapping("/me")
-    public ResponseEntity<UserDTO> getCurrentUser(@RequestHeader("Authorization") String authHeader) {
-        // Extract JWT
-        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
-            return ResponseEntity.status(401).build();
+    /** Extract JWT from Authorization header */
+    private String extractToken(HttpServletRequest request) {
+        String header = request.getHeader("Authorization");
+        if (header == null || !header.startsWith("Bearer ")) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Missing or invalid Authorization header");
         }
+        return header.substring(7);
+    }
 
-        String token = authHeader.substring(7);
+    /** Get authenticated user (auth info + profile stats) */
+    @GetMapping("/me")
+    public ResponseEntity<UserFullDTO> getCurrentUser(HttpServletRequest request) {
+        String token = extractToken(request);
         String username = jwtService.extractUsername(token);
 
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        UserAuth auth = userAuthRepository.findByUsername(username)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
 
-        // Map entity → DTO
-        UserDTO dto = UserDTO.builder()
-                .id(user.getId())
-                .username(user.getUsername())
-                .email(user.getEmail())
-                .streak_count(user.getStreak_count())
-                .longest_streak(user.getLongest_streak())
-                .totalMinutes(user.getTotalMinutes())
-                .last_workout(user.getLast_workout())
-                .created_at(user.getCreated_at())
+        UserProfile profile = userProfileRepository.findByAuth(auth)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User profile not found"));
+
+        UserFullDTO dto = UserFullDTO.builder()
+                .auth(UserAuthDTO.fromEntity(auth))
+                .profile(UserProfileDTO.fromEntity(profile))
                 .build();
 
         return ResponseEntity.ok(dto);
     }
-    @GetMapping("/top")
-    public ResponseEntity<List<UserDTO>> getTopUsersByPoints() {
-        List<User> users = userRepository.findTop50ByOrderByPointsDesc();
 
-        // sanitize nulls to zero
-        List<UserDTO> dtos = users.stream()
-                .map(u -> UserDTO.builder()
-                        .id(u.getId())
-                        .username(u.getUsername())
-                        .email(u.getEmail())
-                        .streak_count(u.getStreak_count() == null ? 0 : u.getStreak_count())
-                        .longest_streak(u.getLongest_streak() == null ? 0 : u.getLongest_streak())
-                        .totalMinutes(u.getTotalMinutes() == null ? 0 : u.getTotalMinutes())
-                        .points(u.getPoints() == null ? 0 : u.getPoints())
-                        .last_workout(u.getLast_workout())
-                        .created_at(u.getCreated_at())
-                        .build())
-                .toList();
+    /** Get top users by points (leaderboard) */
+    @GetMapping("/top")
+    public ResponseEntity<List<UserProfileDTO>> getTopUsersByPoints() {
+        List<UserProfile> profiles = userProfileRepository.findTop50ByOrderByPointsDesc();
+
+        List<UserProfileDTO> dtos = profiles.stream()
+                .map(UserProfileDTO::fromEntity)
+                .collect(Collectors.toList());
 
         return ResponseEntity.ok(dtos);
     }
